if(NOT REQSERVER_BUILD_PLAYGROUND)
  set_property(DIRECTORY PROPERTY EXCLUDE_FROM_ALL ON)
  set(EXCLUDE_FROM_ALL ON)
else()
  message(STATUS "Generate build targets for the playground.")
endif()

add_subdirectory(CURLMultiThread)
add_subdirectory(HelloMCURL)
add_subdirectory(RunLoop)
add_subdirectory(CycleCaller)
add_subdirectory(BSONBuilder)
add_subdirectory(MongoTest)
add_subdirectory(SinglePull)
